chapter-02/k8s/01-gitlab/50-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab
  namespace: gitlab
  labels:
    app: gitlab
  annotations:
    #traefik.ingress.kubernetes.io/redirect-entry-point: https
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  tls:
  - hosts:
    - reg.gitlab.platform.glslinc.com
    - gitlab.platform.glslinc.com
    secretName: gitlab-platform-tls
  rules:
  - host: gitlab.platform.glslinc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab
            port:
              number: 80
  - host: reg.gitlab.platform.glslinc.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab
            port:
              number: 5050
